# find-ideal-estate

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARQUITETURA-SISTEMA.md  BEST_PRACTICES.md  BEST_PRACTICES_REMEDIATION_PLAN.md  BOTOES_ANALISE_ZONAS_DETALHES.html  DOCUMENTATION.md  FRONTEND_GEMINI.html  MIGRATION_PLAN.md  PRD.md  README.md  TEST_PLAN.md  TEST_RESULTS_2026-02-20.md  VEGETACAO.md  WORK_LOG.md  _debug_urls.py  _debug_vr_capture.py  alembic.ini  analise_reformulacao_find_ideal_estate_v18.md  docker-compose.yml  esbocoFrontend.txt  fix_findideal.py  job_6816ae50_listings.csv  platforms.yaml  pyproject.toml  pyproject.toml (edit)  requirements.txt  skills_README.md
.vite/: results.json
apps/api/: pyproject.toml  sitecustomize.py
apps/api/contracts/: __init__.py
apps/api/src/: main.py
apps/api/tests/: test_phase0_db.py  test_phase0_health.py  test_phase1_journeys_jobs_routes.py  test_phase1_sse.py  test_phase2_runner.py  test_phase2_smoke_stubbroker.py  test_phase2_workers.py  test_phase3_geocoding.py  test_phase3_geosampa_ingestion.py  test_phase3_gtfs_ingestion.py  test_phase3_otp_adapter.py  test_phase3_transport_points_service.py  test_phase3_transport_tile_perf.py  test_phase3_valhalla_adapter.py  test_phase4_badges.py  test_phase4_candidate_generation_helpers.py  test_phase4_container.py  test_phase4_enrichment_filters.py  test_phase4_legacy_candidate_zone_generation.py  test_phase4_vegetation.py  test_phase4_zone_poi_enrichment.py  test_phase4_zone_reuse.py  test_phase5_address_suggestions.py  test_phase5_dedup.py  test_phase5_scraper_extraction.py  test_phase5_scraper_health.py  test_phase5_scraping_lock.py  test_phase5_search_requests.py  (+5 more)
(+1139 files in other folders)
