[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "find-ideal-estate-api"
version = "0.1.0"
description = "Find Ideal Estate API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "../../packages/contracts"
]
